@@ -3,6 +3,7 @@ git-annex (3.20120630) UNRELEASED; urgency=low
   * get, move, copy: Now refuse to do anything when the requested file
     transfer is already in progress by another process.
   * status: Lists transfers that are currently in progress.
+  * Fix passing --uuid to git-annex-shell.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 01 Jul 2012 15:04:37 -0400
 
